# adv_graphics

./: CMakeLists.txt  colour.h  directional_light.cpp  hit.h  image_1024.ppm  image_64.ppm  light.h  main.cpp  material.h  object.h  perlin_noise.cpp  perlin_noise.h  phong.cpp  phong.h  phong_texture.cpp  phong_texture.h  phong_texture_mesh.cpp  phong_texture_mesh.h  physical_light.cpp  physical_light.h  polymesh.cpp  polymesh.h  ray.h  scene.cpp  scene.h  sphere.cpp  sphere.h  texture.cpp  texture.h  transform.h  vector.h  vertex.h
bunny/: bunny_zipper.kcply
